<resources>
    <string name="app_name">Nyssen Laskin</string>
    <string name="bus">Bussi</string>
    <string name="tram">Ratikka</string>
    <string name="train">Lähijuna</string>

    <string name="add_new">Lisää matka!</string>
    <string name="fab">Lisätään matka!</string>
    <string name="welcome_new_activity">Lisätään uusi matka!</string>
    <string name="date">Päivämäärä</string>
    <string name="time">Kellonaika</string>
    <string name="chooseVehicle">Millä liikut tänään?</string>
    <string name="deleteOne">Poista valittu matka</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Asetukset</string>
    <string name="close">Sulje</string>
    <string name="chooseMessage">Valitsit matkan:</string>


    <string name="deleteDatabase">Tyhjennä tietokanta</string>
    <string name="hello">Lisää + painikkeesta uusi matka!</string>
    <string name="noUser">Kirjaudu sisään!</string>
    <string name="info">Tietoja kaudesta</string>

    <string name="selectDate">Valitse matkustuspäivä!</string>
    <string name="selectTime">Aseta lähtöaika!</string>

    <!-- UI Titles -->
    <string name="nightFareTitle">Yömatkaa</string>
    <string name="journeyDateTitle">Matkan päivämäärä</string>

    <string name="customerTitle">Matkustajaryhmä: </string>
    <string name="seasonDurationTitle">Lipun pituus: </string>
    <string name="zonesTitle">Vyöhykkeitä: </string>

    <string name="starDate">Kausi alkoi</string>
    <string name="endDate">Kausi päättyy</string>
    <string name="estimate">Arvio matkoista</string>
    <string name="daysLeft">Päiviä jäljellä</string>

    <string name="seasonEnded">Päättynyt</string>


    <!-- Preference Titles -->
    <string name="ticket_header">Liput</string>
    <string name="database_header">Tietokanta</string>

    <!-- Customers Types -->
    <string name="adults">Aikuinen</string>
    <string name="youth">Nuori</string>
    <string name="children">Lapsi</string>

    <!-- Duration Types -->
    <string name="month">30 päivää</string>
    <string name="year">360 päivää</string>

    <!-- Zones -->
    <string name="zones_2">2 vyöhykettä</string>
    <string name="zones_3">3 vyöhykettä</string>
    <string name="zones_4">4 vyöhykettä</string>
    <string name="zones_5">5 vyöhykettä</string>
    <string name="zones_6">6 vyöhykettä</string>

    <string name="customer_title_settings">Matkustajaryhmä</string>
    <string name="duration_title_settings">Kauden pituus</string>
    <string name="zones_title_settings">Kausilipun vyöhykkeiden määrä</string>

    <string name="LogInInfo">Kirjaudu tietokantaan</string>
    <string name="LogIn">Kirjaudu sisään</string>
    <string name="LogOut">Kirjaudu ulos</string>
    <string name="payments">Maksut kaudella</string>
    <string name="logo">logo</string>


    <string name="deleteMessage">Haluatko varmasti poistaa kyseisen matkan?</string>
    <string name="deleteDatabaseMessage">Haluatko varmasti tyhjentää tietokannan?</string>
    <string name="transfer">Vaihtomatka! Matkaa ei tallenneta!</string>
    <string name="seasonPrice">Kauden hinta</string>
    <string name="neededJourney">Matkaa jäljellä</string>
    <string name="totalTrips">Kuljettua matkaa</string>
    <string name="estimatePayments">Arvio maksuista</string>

</resources>